<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
    app:cardBackgroundColor="@android:color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <ImageView
            android:id="@+id/productImg"
            android:layout_width="0dp"
            android:layout_height="180dp"
            android:importantForAccessibility="no"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/newarrival"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/productName"
            android:layout_width="104dp"
            android:layout_height="24dp"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/product_name"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/productImg"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:id="@+id/textPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_price"
            android:textColor="#FF5722"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/rupee"
            app:layout_constraintTop_toBottomOf="@+id/productName" />

        <TextView
            android:id="@+id/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating"
            app:layout_constraintBottom_toBottomOf="@+id/productName"
            app:layout_constraintEnd_toStartOf="@+id/imageView5"
            app:layout_constraintTop_toTopOf="@+id/productName"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/rupee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rupee"
            android:textColor="#FF5722"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/productName" />

        <TextView
            android:id="@+id/mainPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/main_price"
            android:textColor="#757575"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/textPrice"
            app:layout_constraintStart_toEndOf="@+id/textPrice"
            app:layout_constraintTop_toBottomOf="@+id/productName"
            app:layout_constraintVertical_bias="0.4" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="20dp"
            android:layout_height="20dp"
            app:tint="@color/onSecondary"
            android:importantForAccessibility="no"
            app:layout_constraintBottom_toBottomOf="@+id/rating"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/rating"
            app:srcCompat="@drawable/baseline_star_24" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
