<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.fragment.screen.CategoryFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/mensCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextFormat"
            android:text="@string/mens_category" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/mensRc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/womenCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextFormat"
            android:text="@string/women_category"
            android:layout_marginTop="16dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/womenRc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/jewelleryCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextFormat"
            android:text="@string/jewellery"
            android:layout_marginTop="16dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/jewelleryRc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/electronicsCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextFormat"
            android:text="@string/electronics"
            android:layout_marginTop="16dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/electronicsRc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false"
            android:layout_marginTop="8dp"/>

        <ProgressBar
            android:id="@+id/progressBar2"
            style="?android:attr/progressBarStyle"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:indeterminateTint="@color/neon_body"
            android:visibility="gone"
            android:layout_marginTop="16dp"/>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>

