<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".ui.activity.SignUpActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:importantForAccessibility="no"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/signupbg" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="164dp"
        android:text="@string/create_account"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/userNameEditText"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/username"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="@color/onBackground"
        android:textColorHint="#455A64"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        tools:ignore="VisualLintTextFieldSize,VisualLintBounds" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/email"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="@color/onBackground"
        android:textColorHint="#455A64"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userNameEditText"
        tools:ignore="VisualLintTextFieldSize,VisualLintBounds" />

    <EditText
        android:id="@+id/mobileNumberEditText"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/mobile_number"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="number"
        android:padding="10dp"
        android:textColor="@color/onBackground"
        android:textColorHint="#455A64"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText"
        tools:ignore="VisualLintTextFieldSize,VisualLintBounds" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/password"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/onBackground"
        android:textColorHint="#455A64"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mobileNumberEditText"
        tools:ignore="VisualLintTextFieldSize,VisualLintBounds" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/registerButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/register"
        android:textStyle="bold"
        android:textSize="26sp"
        android:background="@drawable/btn_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
        tools:ignore="VisualLintBounds" />

    <LinearLayout
        android:id="@+id/loginContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerButton">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="16dp"
            android:text="@string/i_already_have_an_account" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardLogin"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:cardBackgroundColor="@color/buttonColor"
            app:cardCornerRadius="50dp"
            app:cardElevation="8dp">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:importantForAccessibility="no"
                app:srcCompat="@drawable/arrow" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>