<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbg"
    tools:context=".ui.activity.LoginActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="444dp"
        android:text="Login"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:text="@string/good_to_see_you_back"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />


    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/email"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/onBackground"
        android:textColorHint="#455A64"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:ignore="VisualLintTextFieldSize,VisualLintBounds" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/password"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/onBackground"
        android:textColorHint="#455A64"
        app:layout_constraintEnd_toEndOf="@+id/emailEditText"
        app:layout_constraintStart_toStartOf="@+id/emailEditText"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText"
        tools:ignore="VisualLintTextFieldSize,VisualLintBounds" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/login"
        android:textStyle="bold"
        android:textSize="26sp"
        android:background="@drawable/btn_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
        tools:ignore="VisualLintBounds" />

    <LinearLayout
        android:id="@+id/loginContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="16dp"
            android:text="@string/don_t_have_an_account" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardLogin"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:cardBackgroundColor="@color/buttonColor"
            app:cardCornerRadius="50dp">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:importantForAccessibility="no"
                app:srcCompat="@drawable/arrow" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>