<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.slider.SliderFourFragment">

    <com.google.android.material.card.MaterialCardView
        app:cardBackgroundColor="@color/dotColor"
        android:layout_width="match_parent"
        android:layout_height="650dp"
        app:strokeColor="@android:color/transparent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:elevation="20dp"
        app:cardCornerRadius="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.365">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!-- Top Image Section -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:importantForAccessibility="no"
                    android:scaleType="centerCrop"
                    android:src="@drawable/electronics" />
            </LinearLayout>

            <!-- Text Content Section -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center|center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/electronics"
                    android:textColor="@color/onBackground"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textSubtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/latest_amp_trendy"
                    android:textColor="@color/onBackground"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="24dp"
                    android:gravity="center"
                    android:text="@string/discover_the_newest_gadgets_must_have_electronics_and_tech_essentials_for_everyday_convenience_and_entertainment"
                    android:textColor="@color/onBackground"
                    android:textSize="14sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnStart"
                    android:layout_marginTop="42dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/btn_bg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/let_s_start" />
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>